<resources>
    <string name="app_name">Pick Room</string>

    <string name="title_activity_room">room</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_notic">Thông báo</string>
    <string name="nav_sup">Hỗ trợ</string>
    <string name="nav_tk">Tài khoản</string>
    <string name="nav_out">Đăng xuất</string>
    <string name="nav_user">Cá nhân</string>

    <string name="navi_draw_open">Open navi</string>
    <string name="navi_draw_close">Close navi</string>

    <string name="action_search">Tìm kiếm</string>
</resources>