<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_black_24dp"></item>

        <item android:id="@+id/nav_notic"
            android:title="@string/nav_notic"
            android:icon="@drawable/notice"></item>

        <item android:id="@+id/nav_support"
            android:title="@string/nav_sup"
            android:icon="@drawable/support"></item>
    </group>
    <item android:title="@string/nav_tk">
        <menu>
            <item android:id="@+id/nav_taikhoan"
                android:title="@string/nav_user"
                android:icon="@drawable/user"></item>

            <item android:id="@+id/nav_dangxuat"
                android:title="@string/nav_out"
                android:icon="@drawable/dangxuat"></item>


        </menu>
    </item>
</menu>